--- a/src/components/form/HelpTextContainer.module.css
+++ b/src/components/form/HelpTextContainer.module.css
@@ -1,3 +1,9 @@
 .helpTextContainer {
   padding: 2px 4px;
 }
+
+@media print {
+  .helpTextContainer {
+    display: none;
+  }
+}
